2010-07-10  Dan McGee  <dan@archlinux.org>

	* Updated PKGBUILD to be in line with standard style
	* Upstream update

2009-01-03  Eric Belanger  <eric@archlinux.org>

	* eventlog 0.2.9-1
	* Upstream update
	* Added ChangeLog