@@ -4,8 +4,8 @@
 
 pkgname=eventlog
 pkgver=0.2.12
-pkgrel=1
-pkgdesc="A new API to format and send structured log messages"
+pkgrel=2
+pkgdesc="API to format and send structured log messages"
 arch=('i686' 'x86_64')
 url="http://www.balabit.com/support/community/products/"
 license=('BSD')
@@ -17,13 +17,13 @@ md5sums=('3d6ebda8a161d36cb40d09328f78786b')
 sha1sums=('3e35a634e7de029ab9d36995a085bfcb00ed6a4d')
 
 build() {
-  cd ${srcdir}/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var
   make
 }
 
 package() {
-  cd ${srcdir}/${pkgname}-${pkgver}
-  make DESTDIR=${pkgdir} install
-  install -D -m644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
+  install -D -m644 COPYING "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
 }
