@@ -1,3 +1,8 @@
+2011-04-05  Stéphane Gaudreault  <stephane@archlinux.org>
+
+    * Rebuild of old package
+    * Tidy up PKGBUILD
+
 2010-07-10  Dan McGee  <dan@archlinux.org>
 
 	* Updated PKGBUILD to be in line with standard style
